--- a/style.css
+++ b/style.css
@@ -5,11 +5,36 @@
 @tailwind utilities;
 
 @layer base {
-    html, body, #__next {
-        @apply m-0 h-full;
-        /*color: #98405f;*/
-    }
-    a {
-        @apply text-green-500;
-    }
+  html,
+  body,
+  #__next {
+    @apply m-0 h-full;
+    /*color: #98405f;*/
+  }
+  a {
+    @apply text-green-500;
+  }
+  .circle {
+    display: inline-block;
+    border-radius: 50%;
+    min-width: 40px;
+    min-height: 40px;
+    padding: 5px;
+    color: white;
+    text-align: center;
+    line-height: 1;
+    box-sizing: content-box;
+    white-space: nowrap;
+  }
+  .circle:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    padding-top: 100%;
+    height: 0;
+  }
+  .circle span {
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
